# crates/pragma-api/src/handlers/users/mod.rs
@@ -1,11 +1,13 @@
 pub mod historical;
 pub mod kpis;
+pub mod pending_assets;
 pub mod profile;
 pub mod summary;
 pub mod transactions;
 
 pub use historical::get_historical_user_performance;
 pub use kpis::get_user_kpis;
+pub use pending_assets::get_user_pending_assets;
 pub use profile::get_user_profile;
 pub use summary::get_user_position_summary;
 pub use transactions::get_user_transaction_history;
